# midi-recorder

./: .gitignore  GPIO11.py  GPIO2.py  GPIO2forpi.py  GPIOevent.py  GPIOtest2.py  Untitled-1  binaryconvert.py  buttoncheck.py  buttoncheck2.py  fluidsynth  midi-sport  pin_interface.py  pinstate.txt  pyproject.toml  recorder.py  testproc.py
edd/: pin_interface.py  recorder.py
midi_sport/: pin_interface.py  recorder.py
tests/: test_midi_sport.py
