[tool.poetry]
name = "midi_sport"
version = "0.0.1"
description = "Midi controller software"
authors = ["Edd Salkield <edd@salkield.uk>"]

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.3.0"
mido = "^1.2.9"
music21 = "^5.7.2"
"RPi.GPIO" = "^0.7.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
midi-sport = "midi_sport.pin_interface:main"
